samples/_failures_safe/1761330542_3bc21f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b584cc65.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_b584cc65.c:112:17: error: expected ‘,’ or ‘;’ at end of input
  112 |                 long long product = (long long)a->data
      |                 ^~~~
./samples/SAFE/__tmp_b584cc65.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b584cc65.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b584cc65.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b584cc65.c:112:17: error: expected declaration or statement at end of input
